Added simple authentication (token in http headers)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,7 +4,8 @@ play.evolutions.db.default.autoApply=true
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.default.driver="slick.driver.PostgresqlDriver$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost/farmers"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/farmers"
 slick.dbs.default.db.user="sandbox"
 slick.dbs.default.db.password="sandbox"
+slick.dbs.default.db.numThreads=20
 
